--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
 :root {
+  /* fonts */
   --main-font: 'Roboto', sans-serif;
   --secondary-font: 'Raleway', sans-serif;
+
+  /* text color */
   --main-txt-clr: #212121;
   --secondary-txt-clr: #757575;
   --light-txt-clr: #ffffff;
   --accent-clr: #2196f3;
+  /* bg colors */
   --dark-bg-clr: #2f303a;
   --light-bg-clr: #f5f4fa;
+  /* others */
+  --indent: 30px;
+  --items: 3;
 }
 
 body {
@@ -24,9 +31,54 @@ body {
 }
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
+/* Card set */
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--indent);
+}
+.card-set-item {
+  flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
+}
+/* END Card set */
+
 /* =========HEADER========= */
+.header > .container {
+  display: flex;
+  align-items: center;
+}
+.header .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 94px;
+}
 .logo {
   font-family: var(--secondary-font);
   font-weight: 700;
@@ -36,14 +88,30 @@ body {
 .logo-clr {
   color: var(--accent-clr);
 }
+.nav-list {
+  display: flex;
+  gap: 50px;
+}
 
+.contact-list {
+  display: flex;
+  gap: 50px;
+  margin-left: auto;
+}
+.nav-list-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  letter-spacing: 0.02em;
+}
 .contact-list-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--secondary-txt-clr);
   letter-spacing: 0.02em;
 }
-.nav-list-link {
-  letter-spacing: 0.02em;
-}
+
 .nav-list-link:hover,
 .nav-list-link:focus,
 .contact-list-link:hover,
@@ -58,7 +126,15 @@ body {
 
 /* =========HERO SECTION========= */
 .hero-section {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-color: var(--dark-bg-clr);
+}
+.hero-section .container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--indent);
 }
 .hero-title {
   font-weight: 900;
@@ -72,6 +148,13 @@ body {
   color: var(--light-txt-clr);
 }
 .hero-btn {
+  min-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+  border: none;
+  border-radius: 4px;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -92,7 +175,14 @@ body {
 /* =========END HERO SECTION========= */
 
 /* =========FEATURE SECTION========= */
+.feature-section {
+  padding-top: 94px;
+}
+.feature-section .container {
+  --items: 4;
+}
 .feature-list-title {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: calc(16 / 14);
 
@@ -108,6 +198,7 @@ body {
 
 /* =========ENGAGE SECTION========= */
 .engage-title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
@@ -116,12 +207,23 @@ body {
 
 /* =========TEAM SECTION========= */
 .team-section {
+  --items: 4;
+
   background-color: var(--light-bg-clr);
 }
 .team-title {
+  margin-bottom: 50px;
+
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
+}
+.team-list-content {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  background: #ffffff;
+  border-radius: 0px 0px 4px 4px;
 }
 .team-list-title {
   font-weight: 500;
@@ -174,12 +276,18 @@ body {
 
 /* =========FOOTER========= */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--dark-bg-clr);
 }
 .logo-light {
+  display: inline-block;
+  margin-bottom: 20px;
   color: var(--light-txt-clr);
 }
 .address-list-link {
+  display: inline-block;
+  margin-bottom: 9px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
