--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,9 @@ p {
 /* END Card set */
 
 /* =========HEADER========= */
+.header {
+  border-bottom: 1px solid #ececec;
+}
 .header > .container {
   display: flex;
   align-items: center;
@@ -149,7 +152,6 @@ p {
 }
 .hero-btn {
   min-width: 200px;
-  min-height: 50px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
@@ -248,10 +250,10 @@ p {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  gap: 8px;
 }
 .portfolio-list-btn {
   min-height: 38px;
-  margin-right: 8px;
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
