--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,19 @@ p {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /* Card set */
 .card-set {
   display: flex;
@@ -102,6 +114,7 @@ p {
   margin-left: auto;
 }
 .nav-list-link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
