--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ p {
   letter-spacing: 0.02em;
 }
 .contact-list-link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -150,9 +151,9 @@ p {
 .hero-section .container {
   display: flex;
   flex-direction: column;
-  gap: var(--indent);
 }
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -168,6 +169,7 @@ p {
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
+
   border: none;
   border-radius: 4px;
 
@@ -242,6 +244,7 @@ p {
   border-radius: 0px 0px 4px 4px;
 }
 .team-list-title {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -319,9 +322,10 @@ p {
   margin-bottom: 20px;
   color: var(--light-txt-clr);
 }
-.address-list-link {
-  display: inline-block;
+.address-list-item:not(:last-child) {
   margin-bottom: 9px;
+}
+.address-list-link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
